[gd_scene load_steps=7 format=3 uid="uid://bpv6ix233uwci"]

[ext_resource type="Script" uid="uid://b708b2lxjnn8x" path="res://assets/props/paper/paper.gd" id="1_1is5y"]
[ext_resource type="Texture2D" uid="uid://cdrewhpi8ce77" path="res://assets/textures/paper_texture.png" id="1_cmhr0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1is5y"]
albedo_texture = ExtResource("1_cmhr0")

[sub_resource type="QuadMesh" id="QuadMesh_agkho"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cmhr0"]
size = Vector3(1, 11.900001, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1is5y"]
height = 2.8000002

[node name="paper" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
script = ExtResource("1_1is5y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.66, 0, 0, 0, -2.7538174e-08, 1, 0, -0.63, -4.371139e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_1is5y")
mesh = SubResource("QuadMesh_agkho")

[node name="interact" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="interact"]
transform = Transform3D(0.7, 0, 0, 0, 0.039999984, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_cmhr0")
debug_color = Color(0.8761284, 0.6076439, 0.8047091, 0.41960785)

[node name="ButtonAction" type="Area3D" parent="."]

[node name="Label3D" type="Label3D" parent="ButtonAction"]
transform = Transform3D(1, 0, 0, 0, 0.64278764, 0.76604444, 0, -0.76604444, 0.64278764, 0, 0.1, 0)
text = "Lire"

[node name="CollisionShape3D2" type="CollisionShape3D" parent="ButtonAction"]
transform = Transform3D(1.0314304, 0, 0, 0, 0.034927174, 0, 0, 0, 1.3759199, 0, 0.092363805, 0)
shape = SubResource("BoxShape3D_cmhr0")
debug_color = Color(0.8761284, 0.6076439, 0.8047091, 0.41960785)

[node name="InteractionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(11.715705, 0, 0, 0, 1.5444, 0, 0, 0, 11.639629, 0, 0.6970001, 0)
shape = SubResource("CylinderShape3D_1is5y")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
